--- a/europarl.uima/pom.xml
+++ b/europarl.uima/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>concordia</groupId>
+	<groupId>phd</groupId>
 	<artifactId>europarl.uima</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
@@ -25,6 +25,13 @@
 		</pluginManagement>
 	</build>
 
+	<distributionManagement>
+		<repository>
+			<id>dropbox.repo</id>
+			<url>file:///Users/majid/Documents/git/mvn-repo</url>
+		</repository>
+	</distributionManagement>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
