--- a/europarl.uima/pom.xml
+++ b/europarl.uima/pom.xml
@@ -31,7 +31,15 @@
 			<url>file:///Users/majid/Documents/git/mvn-repo</url>
 		</repository>
 	</distributionManagement>
-	
+
+	<repositories>
+		<repository>
+			<id>majid-repo</id>
+			<name>Majid Laali repository</name>
+			<url>http://users.encs.concordia.ca/~m_laali/mvn-repo/</url>
+		</repository>
+	</repositories>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
