--- a/europarl.uima/pom.xml
+++ b/europarl.uima/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>clac.concordia.ca</groupId>
 	<artifactId>europarl.uima</artifactId>
-	<version>0.0.2</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>europarl.uima</name>
